--- a/index.html
+++ b/index.html
@@ -1,3 +1,6 @@
+<!--<?php-->
+<!--session_start();-->
+<!--?>-->
 <!DOCTYPE html>
 <html lang="en">
 
@@ -25,7 +28,7 @@
 
       <!-- Template -->
       <link rel="import" href="./views/shared/_navbar.html" id="navbar-import">
-      <link rel="import" href="./views/shared/_sidebar.html" id="sidebar-import">
+      <link rel="import" href="./views/shared/_sidebar.php" id="sidebar-import">
 
   </head>
 
